Lecture 5 and started lecture 6

--- a/09.intro_to_optimisation.md
+++ b/09.intro_to_optimisation.md
@@ -58,6 +58,291 @@ Advanced level references:
 
 
 
+
+## Unconstrained optimisation
+
+Consider a function $f: X \longrightarrow \mathbb{R}$, where $X \subseteq \mathbb{R}$. This function can be written as $f(x)$.
+
+We are going to define the concepts of local maximum, local minimum, global maximum and global minimum for this function. We will then examine some techniques for finding such extrema.
+
+Note that the open interval $(a, b)$ is the set
+
+$$
+\{x \in \mathbb{R}: a<x<b\} .
+$$
+
+If $(a, b) \subseteq X$, we can rewrite this set as
+
+$$
+\{x \in X: a<x<b\} .
+$$
+
+- The point $x_{0} \in X$ yields a **local maximum** of the function $f(x)$ if there exists some open interval $(a, b) \subset X$ that contains $x_{0}$ and for which $f\left(x_{0}\right) \geq f(x)$ for all $x \in(a, b)$.
+- The point $x_{0} \in X$ yields a **local minimum** of the function $f(x)$ if there exists some open interval $(a, b) \subset X$ that contains $x_{0}$ and for which $f\left(x_{0}\right) \leq f(x)$ for all $x \in(a, b)$.
+- The point $x_{0} \in X$ yields a **global maximum** of the function $f(x)$ if $f\left(x_{0}\right) \geq f(x)$ for all $x \in X$.
+- The point $x_{0} \in X$ yields a **global minimum** of the function $f(x)$ if $f\left(x_{0}\right) \leq f(x)$ for all $x \in X$.
+
+
+### Finding extrema of functions
+
+There are a variety of rules that can be used to help identify the extrema of functions.  In this unit, we will mention two such rules.
+- The first set of rules focus only on the first derivative of the function. We will call this approach the "first derivative approach".
+- The second set of rules focus on both the first derivative of the function and the second derivative of the function. We will call this approach the "second derivative approach".
+
+
+#### Some terminology
+
+Consider the problem "Maximise the function $f(x)$ on the set $X$ ". This requires us to find a point $x_{0} \in X$ such that $f\left(x_{0}\right) \geq f(x)$ for all $x \in X$.
+
+The solution to the problem is the maximum value obtained by the function over the set $X$. This is given by $f\left(x_{0}\right)$ and is known as a (maximum) value function. Formally, the value function for this problem is defined as
+
+$$
+f\left(x_{0}\right) \equiv \max \{f(x): x \in X\}
+$$
+
+The value (or possibly values) of $x$ that solve this optimisation problem are sometimes known as "arg max"s because they are the arguments that yield a maximum value of the objective function on the constraint set. Formally, if $f\left(x_{0}\right) \geq f(x)$ for all $x \in X$, then
+
+$$
+x_{0} \in \arg \max \{f(x): x \in X\}
+$$
+
+If there is a unique value of $x$ that solves the constrained maximisation problem, then we would have
+
+$$
+x_{0}=\arg \max \{f(x): x \in X\} .
+$$
+
+
+Similarly, consider the problem "Minimise the function $f(x)$ on the set $X$ ". This requires us to find a point $x_{0} \in X$ such that $f\left(x_{0}\right) \leq f(x)$ for all $x \in X$.
+
+The solution to the problem is the minimum value obtained by the function over the set $X$. This is given by $f\left(x_{0}\right)$ and is known as a (minimum) value function. Formally, the value function for this problem is defined as
+
+$$
+f\left(x_{0}\right) \equiv \min \{f(x): x \in X\}
+$$
+
+
+The value (or possibly values) of $x$ that solve this optimisation problem are sometimes known as "arg min"s because they are the arguments that yield a minimum value of the objective function on the constraint set.  Formally, if $f\left(x_{0}\right) \leq f(x)$ for all $x \in X$, then
+
+$$
+x_{0} \in \arg \min \{f(x): x \in X\} .
+$$
+
+If there is a unique value of $x$ that solves the constrained minimisation problem, then we would have
+
+$$
+x_{0}=\arg \min \{f(x): x \in X\} .
+$$
+
+
+### Critical points of a function
+
+Consider a function $f: X \longrightarrow \mathbb{R}$, where $X \subseteq \mathbb{R}$. This function can be written as $f(x)$.
+
+The point $x_{0} \in X$ is a critical point for the function $f(x)$ if either
+
+$$
+f^{\prime}(x)=0 \text { when } x=x_{0}
+$$
+
+or
+
+$$f^{\prime}(x) \text{ is undefined when } x=x_{0}$$
+
+Critical points are important because they are sometimes a local extremum of a function. Note, however, that a critical point of a function will not necessarily yield a local extremum for that function. In other words, being a critical point is a necessary, but not a sufficient, condition for that point to yield an extremum of the function.
+
+
+#### Examples
+
+```{dropdown} Example 1
+
+Let $f(x)=x^{n}$, where $n \in \mathbb{N}$ and $n>1$. Then $f^{\prime}(x)=n x^{n-1}$. 
+
+Clearly $n x^{n-1}$ is defined for all $x \in \mathbb{R}$. Note that $n x^{n-1}=0$ if and only if $x=0$. 
+
+Thus the only critical point for this function occurs when $x=0$.
+```
+
+```{dropdown} Example 2
+
+Let $f(x)=\ln (x)$, where $x \in(0, \infty)$. Then $f^{\prime}(x)=\frac{1}{x}$. Note that $\frac{1}{x}$ is not defined when $x=0$. 
+
+However, the point $x=0$ is NOT a critical value of the function $\ln (x)$. The reason for this is that the point $x=0$ does not belong the domain of this function, which is the open interval $(0, \infty)$. 
+
+Furthermore, we know that $\frac{1}{x} \neq 0$ for any choice of $x$. 
+
+Thus we can conclude that there are no critical values for the function $\ln (x)$.
+```
+
+
+```{dropdown} Example 3
+
+Consider the function
+
+$$
+f(x)=\left\{\begin{array}{cc}
+2 x & \text { if } x \leq 1 \\
+\frac{1}{2} x+\frac{3}{2} & \text { if } x \geq 1
+\end{array}\right.
+$$
+
+- There is no problem with this double definition at the point $x=1$ because the two parts of the function are equal at that point.
+- We have already shown that this function is continuous on $\mathbb{R}$ but that it is not differentiable at the point $x=1$.
+- On the interval $(-\infty, 1)$, we have $f^{\prime}(x)=2 \neq 0$. Thus there are no critical points of this function on that interval.
+- On the interval $(1, \infty)$, we have $f^{\prime}(x)=\frac{1}{2} \neq 0$. As such, there are no critical points of this function on that interval either.
+
+However, $f^{\prime}(x)$ when $x=1$. Since the point $x=1$ belongs to the domain of this function, we know that it is a critical point of the function.  Thus we can conclude that the only critical point of this function occurs when $x=1$.
+```
+
+
+
+### The first derivative approach to optimisation
+
+- Suppose that (i) $x_{0} \in(a, b) \subseteq X \subseteq \mathbb{R}$, (ii) $x_{0}$ is a critical point of $X$, (iii) $f^{\prime}(x)>0$ for all $x \in\left(a, x_{0}\right)$ and (iv) $f^{\prime}(x)<0$ for all $x \in\left(x_{0}, b\right)$. Then the point $x=x_{0}$ will yield a maximum of the function $f(x)$ on the interval $(a, b)$. If $(a, b) \subset X$, we can only conclude that $f\left(x_{0}\right)$ is a local maximum of the function. If $(a, b)=X$, we can conclude that $f\left(x_{0}\right)$ is a global maximum of the function.
+- Suppose that (i) $x_{0} \in(a, b) \subseteq X \subseteq \mathbb{R}$, (ii) $x_{0}$ is a critical point of $X$, (iii) $f^{\prime}(x)<0$ for all $x \in\left(a, x_{0}\right)$ and (iv) $f^{\prime}(x)>0$ for all $x \in\left(x_{0}, b\right)$. Then the point $x=x_{0}$ will yield a minimum of the function $f(x)$ on the interval $(a, b)$. If $(a, b) \subset X$, we can only conclude that $f\left(x_{0}\right)$ is a local minimum of the function. If $(a, b)=X$, we can conclude that $f\left(x_{0}\right)$ is a global minimum of the function.
+
+
+### The second derivative approach to optimisation
+
+The second derivative approach to unconstrained optimisation problems makes use of both the first derivative of a function and the second derivative of a function. The first derivative component of this approach is known as the **first-order condition**. The second derivative component of this approach is known as the **second-order condition**.
+- The point $x_{0} \in X \subseteq \mathbb{R}$ yields a local maximum of the function $f: X \longrightarrow \mathbb{R}$ if both (i) $f^{\prime}\left(x_{0}\right)=0$ and (ii) $f^{\prime \prime}\left(x_{0}\right)<0$.
+- The point $x_{0} \in X \subseteq \mathbb{R}$ yields a local minimum of the function $f: X \longrightarrow \mathbb{R}$ if both (i) $f^{\prime}\left(x_{0}\right)=0$ and (ii) $f^{\prime \prime}\left(x_{0}\right)>0$.
+- Note that if both (i) $f^{\prime}\left(x_{0}\right)=0$ and (ii) $f^{\prime \prime}\left(x_{0}\right)=0$, then we might not be able to use the second derivative approach to solve the problem.
+
+
+### Example
+
+This is an extension of Worked Example 4.9 in {cite:ps}`bradley2008` (pp. 162-163).
+Consider a monopolist that produces a single good. Suppose that the demand function for this good is $Q=65-5 P$. The monopolist has a fixed cost of $\$ 30$ and a constant marginal cost of $\$ 2$ per unit of the good that is produced.  We have previously shown that the profit function for this monopolist (assuming that it cannot price discriminate) is
+
+$$
+\pi(Q)=-\left(\frac{1}{5}\right) Q^{2}+11 Q-30
+$$
+
+The first derivative of the profit function for this monopolist is
+
+$$
+\pi^{\prime}(Q)=-\left(\frac{2}{5}\right) Q+11
+$$
+
+The second derivative of the profit function for this monopolist is
+
+$$
+\pi^{\prime \prime}(Q)=-\left(\frac{2}{5}\right)
+$$
+
+The first-order condition for profit maximisation by this monopolist is
+
+$$
+\begin{aligned}
+\pi^{\prime}(Q) & =0 \\
+\Longleftrightarrow-\left(\frac{2}{5}\right) Q+11 & =0 \\
+\Longleftrightarrow \quad 11 & =\left(\frac{2}{5}\right) Q \\
+\Longleftrightarrow \quad 55 & =2 Q \\
+\Longleftrightarrow \quad Q_{0} & =\frac{55}{2} .
+\end{aligned}
+$$
+
+Note that
+
+$$
+\pi^{\prime \prime}(Q)=-\left(\frac{2}{5}\right) \text { for all } Q \in[0, \infty)
+$$
+
+Thus the second-order condition for profit maximisation by this monopolist is satisfied. Indeed, since the second order condition is satisfied for all possible values of $Q$ and not just for our candidate value of $Q$, we can conclude that $Q_{0}=\frac{55}{2}$ will yield a global profit maximum for the monopolist.
+
+
+The maximum amount of profit that this monopolist can earn is
+
+$$
+\begin{aligned}
+\pi^{*} & =\pi\left(Q_{0}\right) \\
+& =\pi\left(\frac{55}{2}\right) \\
+& =-\left(\frac{1}{5}\right) Q_{0}^{2}+11 Q_{0}-30 \\
+& =-\left(\frac{1}{5}\right)\left(\frac{55}{2}\right)^{2}+11\left(\frac{55}{2}\right)-30 \\
+& =-(0.2)(756.25)+11(27.5)-30 \\
+& =151.25+302.5-30 \\
+& =\$ 423.75 .
+\end{aligned}
+$$
+
+
+### Profit maximisation in general
+
+Suppose that the profits earned by a firm are given by the function
+
+$$
+\pi(Q)=R(Q)-C(Q)
+$$
+
+where $R(Q)$ is the firm's total revenue as a a function of output and $C(Q)$ is the firm's total cost as a function of output.
+
+We want to consider the firm's profit maximisation problem. We will employ the first-derivative approach to solving this problem.
+
+
+Suppose that profit as a function of output $(\pi(Q))$ is at least twice continuously differentiable. This means that any critical point for this function will involve its first derivative equalling zero.
+
+Suppose that a unique critical point of this variety exists. It will involve $\pi^{\prime}(Q)=0$. Note that
+
+$$
+\begin{aligned}
+\pi^{\prime}(Q) & =R^{\prime}(Q)-C^{\prime}(Q) \\
+& =M R(Q)-M C(Q)
+\end{aligned}
+$$
+
+Thus the critical point will occur when
+
+$$
+M R(Q)-M C(Q)=0
+$$
+
+which requires that
+
+$$
+M R(Q)=M C(Q)
+$$
+
+Denote this critical point by $Q_{0}$. A sufficient condition for $Q_{0}$ to generate the maximum possible profit for the firm is that both
+
+$$
+\text { (i) } \pi^{\prime}(Q)>0 \text { for all } Q<Q_{0}
+$$
+
+and
+
+$$
+\text { (ii) } \pi^{\prime}(Q)<0 \text { for all } Q>Q_{0} \text {. }
+$$
+
+Note that
+
+$$
+\begin{aligned}
+\pi^{\prime}(Q)>0 & \Longleftrightarrow M R(Q)-M C(Q)>0 \\
+& \Longleftrightarrow M R(Q)>M C(Q)
+\end{aligned}
+$$
+
+and
+
+$$
+\begin{aligned}
+\pi^{\prime}(Q)<0 & \Longleftrightarrow M R(Q)-M C(Q)<0 \\
+& \Longleftrightarrow M R(Q)<M C(Q) .
+\end{aligned}
+$$
+
+Thus a sufficient set of conditions for $Q_{0}$ to generate the maximum possible profit for the firm is that
+
+1. $M R\left(Q_{0}\right)=M C\left(Q_{0}\right)$,
+2. $M R(Q)>M C(Q)$ for all $Q<Q_{0}$, and
+3. $M R(Q)<M C(Q)$ for all $Q>Q_{0}$.
+
+
+
+
+
 ## Types of optimisation problems
 
 ### Why do economists care about optimisation?
