--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1,4 +1,4 @@
-# Univariate differentiation
+# 📖 Univariate differentiation
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
 
@@ -34,18 +34,8 @@ More advanced references:
 
 
 
-## The setting
+## Limit for functions
 
-We will be working with the metric space known as Euclidean one-space.
-This space is denoted by $(\mathbb{R}, d )$, where 
-
-$$d (x, y ) = \sqrt{(y − x )^2} = |y − x |$$
-is the Euclidean metric (or distance function) on \mathbb{R}.
-
-We will be considering some of the properties of functions that take the form $f : X \rightarrow \mathbb{R}$, where $X \subseteq \mathbb{R}$. In particular, we will be interested in limits, continuity and differentiability.
-
-
-## What is a limit?
 Consider a function, $f: \mathbb{R} \rightarrow \mathbb{R}$. This function can be written as $f(x)$. Note that $x \in \mathbb{R}$ here. Furthermore, for each point $x_0 \in \mathbb{R}$, we have $f(x_0) \in \mathbb{R}$ as well. In other words, the domain of $f$ is $\mathbb{R}$, while the range of $f$ is a (possibly improper) subset of $\mathbb{R}$.
 
 {cite:ps}`spivak2006` (p. 90) provides the following informal definition of a limit: “The function $f$ approaches the limit $l$ near [the point $x =$] $a$,
@@ -72,7 +62,7 @@ $$ \lim_{x  \rightarrow a} f (x ) = l $$
 An illustration of an epsilon-delta limit argument
 ```
 
-## The structure of $\epsilon–\delta$ arguments
+### The structure of $\epsilon–\delta$ arguments
 
 Suppose that we want to attempt to show that $\lim _{x \rightarrow a} f(x)=b$.
 
@@ -99,7 +89,7 @@ $$
 In such cases, an appropriate choice of $\delta_{\epsilon}$ is $\delta_{\epsilon}=\min \left\{\frac{\epsilon}{K}, D\right\}$.
 
 
-## Some useful rules about limits
+### Some useful rules about limits
 
 - In practice, we would like to be able to find at least some limits without having to resort to the formal "epsilon-delta" arguments that define them. The following rules can sometimes assist us with this.
 - Let $c \in \mathbb{R}$ be a fixed constant, $a \in \mathbb{R}, \alpha \in \mathbb{R}, \beta \in \mathbb{R}, n \in \mathbb{N}$, $f: \mathbb{R} \longrightarrow \mathbb{R}$ be a function for which $\lim _{x \rightarrow a} f(x)=\alpha$, and $g: \mathbb{R} \longrightarrow \mathbb{R}$ be a function for which $\lim _{x \rightarrow a} g(x)=\beta$.
@@ -113,10 +103,8 @@ In such cases, an appropriate choice of $\delta_{\epsilon}$ is $\delta_{\epsilon
 - After we have learned about differentiation, we will learn about another useful rule for limits that is known as "L'Hopital's rule".
 
 
-### Examples
-
-
-```{dropdown} Example 1
+```{admonition} Example
+:class: tip
 
 - This is an example in which the chosen function will be very nicely behaved at all points $x \in \mathbb{R}$.
 - Consider the function $f(x)=x$ and the point $x=2$. We will show formally that $\lim _{x \rightarrow 2} f(x)=2$.
@@ -165,7 +153,8 @@ $$
 
 
 
-```{dropdown} Example 2
+```{admonition} Example
+:class: tip
 
 - This example is drawn from Willis Lauritz Peterson of the University of Utah.
 - Consider the mapping $f: \mathbb{R} \longrightarrow \mathbb{R}$ defined by $f(x)=7 x-4$. We want to show that $\lim _{x \rightarrow 2} f(x)=10$.
@@ -180,7 +169,8 @@ $$
 ```
 
 
-```{dropdown} Example 3
+```{admonition} Example
+:class: tip
 
 - Consider the mapping $f: \mathbb{R} \longrightarrow \mathbb{R}$ defined by $f(x)=x^{2}$. We want to show that $\lim _{x \rightarrow 2} f(x)=4$.
 - Note that $|f(x)-4|=\left|x^{2}-4\right|=|(x+2)(x-2)|=|x+2||x-2|$.
@@ -192,7 +182,8 @@ $$
 ```
 
 
-```{dropdown} Example 4
+```{admonition} Example
+:class: tip
 
 This example is drawn from Willis Lauritz Peterson of the University of Utah.
 
@@ -208,7 +199,8 @@ We want to show that $lim_{x \rightarrow 2} f(x ) = −1$.
 ```
 
 
-```{dropdown} Example 5
+```{admonition} Example
+:class: tip
 
 Limits can sometimes exist even when the function being considered is not so well behaved. One such example is provided by {cite:ps}`spivak2006` (pp. 91–92). It involves the use of a trigonometric function.
 
@@ -221,8 +213,8 @@ Clearly this function is not defined when $x = 0$. Furthermore, it can be shown 
 The reason for this is that $sin (\theta) \in [−1, 1]$ for all $\theta \in \mathbb{R}$. Thus $sin ( \frac{1}{x} )$ is bounded above and below by finite numbers as $x \rightarrow 0$. This allows the $x$ component of $x sin (\frac{1}{x})$ to dominate as $x \rightarrow 0$.
 ```
 
-
-```{dropdown} Example 6
+```{admonition} Example
+:class: tip
 
 Limits do not always exist. In this example, we consider a case in which the limit of a function as $x$ approaches a particular point does not exist.
 
@@ -266,6 +258,159 @@ Now for the slightly picky technical details!
 - A function is continuous on a connected interval $(a, b) \subseteq X$ for which $a < b$ if it is continuous at all points in that interval. In other words, a function is continuous on $(a, b) \subseteq X$ for which $a < b$ if $\lim_{x \rightarrow x_0} f (x ) = f (x_0)$ for all $x_0 \in (a, b)$.
 - A function is **continuous** if it is continuous at every point in its domain. In other words, a function is continuous if $\lim_{x \rightarrow x_0} f (x ) = f (x_0)$ for all $x_0 \in X$.
 
+
+```{admonition} Definition
+:class: caution
+
+$f: A \to \mathbb{R}$ is called **continuous** if it is continuous at every $x \in
+A$
+```
+
+```{figure} _static/img/lecture_06/cont_func.png
+:name: discont_func
+:width: 60%
+
+Continuous function
+```
+```{admonition} Example
+:class: tip
+
+Function $f(x) = \exp(x)$ is continuous at $x=0$
+
+**Proof:**
+
+Consider any sequence $\{x_n\}$ which converges to $0$
+
+We want to show that for any $\epsilon>0$ there exists $N$ such that $n \geq N \implies |f(x_n) - f(0)| < \epsilon$.  We have
+:::{math}
+\begin{array}{l}
+|f(x_n) - f(0)| = |\exp(x_n) - 1| < \epsilon \quad \iff \\
+\exp(x_n) - 1 < \epsilon \; \text{ and } \; \exp(x_n) - 1 > -\epsilon  \quad \iff \\
+x_n < \ln(1+\epsilon) \; \text{ and } \; x_n > \ln(1-\epsilon) \quad \Longleftarrow \\
+| x_n - 0 | < \min \big(\ln(1+\epsilon),\ln(1-\epsilon) \big) = \ln(1-\epsilon)
+\end{array}
+:::
+Because due to $x_n \to x$ for any $\epsilon' = \ln(1-\epsilon)$ there exists $N$ such that $n \geq N \implies |x_n - 0| < \epsilon'$, we have $f(x_n) \to f(x)$ by definition.  Thus, $f$ is continuous at $x=0$.
+```
+
+```{admonition} Fact
+:class: important
+
+Some functions known to be continuous on their domains:
+- $f: x \mapsto x^\alpha$
+- $f: x \mapsto |x|$
+- $f: x \mapsto \log(x)$
+- $f: x \mapsto \exp(x)$
+- $f: x \mapsto \sin(x)$
+- $f: x \mapsto \cos(x)$
+
+```
+
+### Types of discontinuities
+
+```{figure} _static/img/lecture_06/4-types-of-discontinuity.png
+:name: cont_func
+:width: 100%
+
+4 common types of discontinuity
+```
+
+```{admonition} Example
+:class: tip
+
+The indicator function $x \mapsto \mathbb{1}\{x > 0\}$ has a jump discontinuity at $0$.
+
+```
+
+
+```{admonition} Fact
+:class: important
+
+Let $f$ and $g$ be functions and let $\alpha \in \mathbb{R}$
+
+%
+1. If $f$ and $g$ are continuous at $x$ then so is $f + g$,
+where
+:::{math}
+(f + g)(x) := f(x) + g(x)
+:::
+
+2. If $f$ is continuous at $x$ then so is $\alpha f$, where
+:::{math}
+(\alpha f)(x) := \alpha f(x)
+:::
+
+3. If $f$ and $g$ are continuous at $x$ and real valued then so is
+$f \circ g$, where
+:::{math}
+(f \circ g)(x) := f(x) \cdot g(x)
+:::
+In the latter case, if in addition $g(x) \ne 0$, then $f/g$ is also continuous.
+
+```
+
+````{admonition} Proof
+:class: dropdown
+
+Just repeatedly apply the properties of the limits
+
+Let's just check that 
+:::{math}
+\text{$f$ and $g$ continuous at $x$}
+\implies 
+\text{$f + g$ continuous at $x$}
+:::
+
+Let $f$ and $g$ be continuous at $x$
+
+Pick any $x_n \to x$
+
+We claim that 
+$f(x_n) + g(x_n) \to f(x) + g(x)$
+
+By assumption, $f(x_n) \to f(x)$ and $g(x_n) \to g(x)$
+
+From this and the triangle inequality we get
+:::{math}
+\| f(x_n) + g(x_n) - (f(x) + g(x)) \|
+\leq 
+:::
+:::{math}
+\leq 
+\| f(x_n) - f(x) \|
++
+\| g(x_n) - g(x) \|
+\to 0
+:::
+````
+
+As a result, set of continuous functions is "closed" under elementary
+arithmetic operations
+
+```{admonition} Example
+:class: tip
+
+The function $f \colon \mathbb{R} \to \mathbb{R}$ defined by
+:::{math}
+f(x) = \frac{\exp(x) + \sin(x)}{2 + \cos(x)} + \frac{x^4}{2}
+- \frac{\cos^3(x)}{8!}
+:::
+is continuous (we just have to be careful to ensure that denominator is not zero -- which it is not for all $x\in\mathbb{R}$)
+```
+
+```{admonition} Example
+:class: tip
+
+An example of oscillating discontinuity is the function $f(x) = \sin(1/x)$ which is discontinuous at $x=0$.
+
+[Video to illustrate this function](https://youtu.be/BayeWDEnXm8?si=255RAsYqZzY9mGvO)
+
+```
+
+
+**EDIT EDIT **
+
+
 Now for the really picky technical details!
 
 Let $X \subseteq \mathbb{R}^n$, $d^n$ be the $n$–dimensional Euclidean distance and $d$ be the one–dimensional Euclidean distance.
@@ -289,9 +434,8 @@ Epsilon-delta continuity diagram
 Epsilon-delta discontinuity diagram
 ```
 
-### Examples
-
-```{dropdown} Example 1
+```{admonition} Example
+:class: tip
 
 Consider the mapping $f : \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x ) = x_2$. We want to show that $f(x)$ is continuous at the point $x = 2$.
 
@@ -308,9 +452,8 @@ We have $|f (2) − f (x )| = |f (x ) − f (2)| = |x − 2||x + 2| < (\delta)(5
 We require $|f (2) − f (x )| < \epsilon$. One way to ensure this is to set $\delta = min(1, \frac{\epsilon}{5})$.
 ```
 
-
-
-```{dropdown} Example 2
+```{admonition} Example
+:class: tip
 
 Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x ) = x$. We want to show that $f (x )$ is continuous for all $x \in X$.
 
@@ -326,8 +469,8 @@ Thus we know that $f$ is continuous at the point $x = a$. Since $a$ was chosen a
 ```
 
 
-
-```{dropdown} Example 3 (discontinuity)
+```{admonition} Example
+:class: tip
 
 Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by 
 
@@ -348,7 +491,8 @@ you explain why this is the case?
 ```
 
 
-```{dropdown} Example 4 (discontinuity)
+```{admonition} Example
+:class: tip
 
 Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by 
 
@@ -364,7 +508,8 @@ This function is discontinuous at the point $x = 0$. *Illustrate the graph of th
 ```
 
 
-```{dropdown} Example 5 (discontinuity)
+```{admonition} Example
+:class: tip
 
 Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by
 
@@ -376,6 +521,8 @@ f (x ) = \begin{cases}
 $$
 This function is sometimes known as Dirichlet’s discontinuous function. It is discontinuous at every point in its domain.
 ```
+
+
 
 
 
@@ -1213,287 +1360,6 @@ $$
 $$
 
 
-
-
-## Unconstrained optimisation
-
-Consider a function $f: X \longrightarrow \mathbb{R}$, where $X \subseteq \mathbb{R}$. This function can be written as $f(x)$.
-
-We are going to define the concepts of local maximum, local minimum, global maximum and global minimum for this function. We will then examine some techniques for finding such extrema.
-
-Note that the open interval $(a, b)$ is the set
-
-$$
-\{x \in \mathbb{R}: a<x<b\} .
-$$
-
-If $(a, b) \subseteq X$, we can rewrite this set as
-
-$$
-\{x \in X: a<x<b\} .
-$$
-
-- The point $x_{0} \in X$ yields a **local maximum** of the function $f(x)$ if there exists some open interval $(a, b) \subset X$ that contains $x_{0}$ and for which $f\left(x_{0}\right) \geq f(x)$ for all $x \in(a, b)$.
-- The point $x_{0} \in X$ yields a **local minimum** of the function $f(x)$ if there exists some open interval $(a, b) \subset X$ that contains $x_{0}$ and for which $f\left(x_{0}\right) \leq f(x)$ for all $x \in(a, b)$.
-- The point $x_{0} \in X$ yields a **global maximum** of the function $f(x)$ if $f\left(x_{0}\right) \geq f(x)$ for all $x \in X$.
-- The point $x_{0} \in X$ yields a **global minimum** of the function $f(x)$ if $f\left(x_{0}\right) \leq f(x)$ for all $x \in X$.
-
-
-### Finding extrema of functions
-
-There are a variety of rules that can be used to help identify the extrema of functions.  In this unit, we will mention two such rules.
-- The first set of rules focus only on the first derivative of the function. We will call this approach the "first derivative approach".
-- The second set of rules focus on both the first derivative of the function and the second derivative of the function. We will call this approach the "second derivative approach".
-
-
-#### Some terminology
-
-Consider the problem "Maximise the function $f(x)$ on the set $X$ ". This requires us to find a point $x_{0} \in X$ such that $f\left(x_{0}\right) \geq f(x)$ for all $x \in X$.
-
-The solution to the problem is the maximum value obtained by the function over the set $X$. This is given by $f\left(x_{0}\right)$ and is known as a (maximum) value function. Formally, the value function for this problem is defined as
-
-$$
-f\left(x_{0}\right) \equiv \max \{f(x): x \in X\}
-$$
-
-The value (or possibly values) of $x$ that solve this optimisation problem are sometimes known as "arg max"s because they are the arguments that yield a maximum value of the objective function on the constraint set. Formally, if $f\left(x_{0}\right) \geq f(x)$ for all $x \in X$, then
-
-$$
-x_{0} \in \arg \max \{f(x): x \in X\}
-$$
-
-If there is a unique value of $x$ that solves the constrained maximisation problem, then we would have
-
-$$
-x_{0}=\arg \max \{f(x): x \in X\} .
-$$
-
-
-Similarly, consider the problem "Minimise the function $f(x)$ on the set $X$ ". This requires us to find a point $x_{0} \in X$ such that $f\left(x_{0}\right) \leq f(x)$ for all $x \in X$.
-
-The solution to the problem is the minimum value obtained by the function over the set $X$. This is given by $f\left(x_{0}\right)$ and is known as a (minimum) value function. Formally, the value function for this problem is defined as
-
-$$
-f\left(x_{0}\right) \equiv \min \{f(x): x \in X\}
-$$
-
-
-The value (or possibly values) of $x$ that solve this optimisation problem are sometimes known as "arg min"s because they are the arguments that yield a minimum value of the objective function on the constraint set.  Formally, if $f\left(x_{0}\right) \leq f(x)$ for all $x \in X$, then
-
-$$
-x_{0} \in \arg \min \{f(x): x \in X\} .
-$$
-
-If there is a unique value of $x$ that solves the constrained minimisation problem, then we would have
-
-$$
-x_{0}=\arg \min \{f(x): x \in X\} .
-$$
-
-
-### Critical points of a function
-
-Consider a function $f: X \longrightarrow \mathbb{R}$, where $X \subseteq \mathbb{R}$. This function can be written as $f(x)$.
-
-The point $x_{0} \in X$ is a critical point for the function $f(x)$ if either
-
-$$
-f^{\prime}(x)=0 \text { when } x=x_{0}
-$$
-
-or
-
-$$f^{\prime}(x) \text{ is undefined when } x=x_{0}$$
-
-Critical points are important because they are sometimes a local extremum of a function. Note, however, that a critical point of a function will not necessarily yield a local extremum for that function. In other words, being a critical point is a necessary, but not a sufficient, condition for that point to yield an extremum of the function.
-
-
-#### Examples
-
-```{dropdown} Example 1
-
-Let $f(x)=x^{n}$, where $n \in \mathbb{N}$ and $n>1$. Then $f^{\prime}(x)=n x^{n-1}$. 
-
-Clearly $n x^{n-1}$ is defined for all $x \in \mathbb{R}$. Note that $n x^{n-1}=0$ if and only if $x=0$. 
-
-Thus the only critical point for this function occurs when $x=0$.
-```
-
-```{dropdown} Example 2
-
-Let $f(x)=\ln (x)$, where $x \in(0, \infty)$. Then $f^{\prime}(x)=\frac{1}{x}$. Note that $\frac{1}{x}$ is not defined when $x=0$. 
-
-However, the point $x=0$ is NOT a critical value of the function $\ln (x)$. The reason for this is that the point $x=0$ does not belong the domain of this function, which is the open interval $(0, \infty)$. 
-
-Furthermore, we know that $\frac{1}{x} \neq 0$ for any choice of $x$. 
-
-Thus we can conclude that there are no critical values for the function $\ln (x)$.
-```
-
-
-```{dropdown} Example 3
-
-Consider the function
-
-$$
-f(x)=\left\{\begin{array}{cc}
-2 x & \text { if } x \leq 1 \\
-\frac{1}{2} x+\frac{3}{2} & \text { if } x \geq 1
-\end{array}\right.
-$$
-
-- There is no problem with this double definition at the point $x=1$ because the two parts of the function are equal at that point.
-- We have already shown that this function is continuous on $\mathbb{R}$ but that it is not differentiable at the point $x=1$.
-- On the interval $(-\infty, 1)$, we have $f^{\prime}(x)=2 \neq 0$. Thus there are no critical points of this function on that interval.
-- On the interval $(1, \infty)$, we have $f^{\prime}(x)=\frac{1}{2} \neq 0$. As such, there are no critical points of this function on that interval either.
-
-However, $f^{\prime}(x)$ when $x=1$. Since the point $x=1$ belongs to the domain of this function, we know that it is a critical point of the function.  Thus we can conclude that the only critical point of this function occurs when $x=1$.
-```
-
-
-
-### The first derivative approach to optimisation
-
-- Suppose that (i) $x_{0} \in(a, b) \subseteq X \subseteq \mathbb{R}$, (ii) $x_{0}$ is a critical point of $X$, (iii) $f^{\prime}(x)>0$ for all $x \in\left(a, x_{0}\right)$ and (iv) $f^{\prime}(x)<0$ for all $x \in\left(x_{0}, b\right)$. Then the point $x=x_{0}$ will yield a maximum of the function $f(x)$ on the interval $(a, b)$. If $(a, b) \subset X$, we can only conclude that $f\left(x_{0}\right)$ is a local maximum of the function. If $(a, b)=X$, we can conclude that $f\left(x_{0}\right)$ is a global maximum of the function.
-- Suppose that (i) $x_{0} \in(a, b) \subseteq X \subseteq \mathbb{R}$, (ii) $x_{0}$ is a critical point of $X$, (iii) $f^{\prime}(x)<0$ for all $x \in\left(a, x_{0}\right)$ and (iv) $f^{\prime}(x)>0$ for all $x \in\left(x_{0}, b\right)$. Then the point $x=x_{0}$ will yield a minimum of the function $f(x)$ on the interval $(a, b)$. If $(a, b) \subset X$, we can only conclude that $f\left(x_{0}\right)$ is a local minimum of the function. If $(a, b)=X$, we can conclude that $f\left(x_{0}\right)$ is a global minimum of the function.
-
-
-### The second derivative approach to optimisation
-
-The second derivative approach to unconstrained optimisation problems makes use of both the first derivative of a function and the second derivative of a function. The first derivative component of this approach is known as the **first-order condition**. The second derivative component of this approach is known as the **second-order condition**.
-- The point $x_{0} \in X \subseteq \mathbb{R}$ yields a local maximum of the function $f: X \longrightarrow \mathbb{R}$ if both (i) $f^{\prime}\left(x_{0}\right)=0$ and (ii) $f^{\prime \prime}\left(x_{0}\right)<0$.
-- The point $x_{0} \in X \subseteq \mathbb{R}$ yields a local minimum of the function $f: X \longrightarrow \mathbb{R}$ if both (i) $f^{\prime}\left(x_{0}\right)=0$ and (ii) $f^{\prime \prime}\left(x_{0}\right)>0$.
-- Note that if both (i) $f^{\prime}\left(x_{0}\right)=0$ and (ii) $f^{\prime \prime}\left(x_{0}\right)=0$, then we might not be able to use the second derivative approach to solve the problem.
-
-
-### Example
-
-This is an extension of Worked Example 4.9 in {cite:ps}`bradley2008` (pp. 162-163).
-Consider a monopolist that produces a single good. Suppose that the demand function for this good is $Q=65-5 P$. The monopolist has a fixed cost of $\$ 30$ and a constant marginal cost of $\$ 2$ per unit of the good that is produced.  We have previously shown that the profit function for this monopolist (assuming that it cannot price discriminate) is
-
-$$
-\pi(Q)=-\left(\frac{1}{5}\right) Q^{2}+11 Q-30
-$$
-
-The first derivative of the profit function for this monopolist is
-
-$$
-\pi^{\prime}(Q)=-\left(\frac{2}{5}\right) Q+11
-$$
-
-The second derivative of the profit function for this monopolist is
-
-$$
-\pi^{\prime \prime}(Q)=-\left(\frac{2}{5}\right)
-$$
-
-The first-order condition for profit maximisation by this monopolist is
-
-$$
-\begin{aligned}
-\pi^{\prime}(Q) & =0 \\
-\Longleftrightarrow-\left(\frac{2}{5}\right) Q+11 & =0 \\
-\Longleftrightarrow \quad 11 & =\left(\frac{2}{5}\right) Q \\
-\Longleftrightarrow \quad 55 & =2 Q \\
-\Longleftrightarrow \quad Q_{0} & =\frac{55}{2} .
-\end{aligned}
-$$
-
-Note that
-
-$$
-\pi^{\prime \prime}(Q)=-\left(\frac{2}{5}\right) \text { for all } Q \in[0, \infty)
-$$
-
-Thus the second-order condition for profit maximisation by this monopolist is satisfied. Indeed, since the second order condition is satisfied for all possible values of $Q$ and not just for our candidate value of $Q$, we can conclude that $Q_{0}=\frac{55}{2}$ will yield a global profit maximum for the monopolist.
-
-
-The maximum amount of profit that this monopolist can earn is
-
-$$
-\begin{aligned}
-\pi^{*} & =\pi\left(Q_{0}\right) \\
-& =\pi\left(\frac{55}{2}\right) \\
-& =-\left(\frac{1}{5}\right) Q_{0}^{2}+11 Q_{0}-30 \\
-& =-\left(\frac{1}{5}\right)\left(\frac{55}{2}\right)^{2}+11\left(\frac{55}{2}\right)-30 \\
-& =-(0.2)(756.25)+11(27.5)-30 \\
-& =151.25+302.5-30 \\
-& =\$ 423.75 .
-\end{aligned}
-$$
-
-
-### Profit maximisation in general
-
-Suppose that the profits earned by a firm are given by the function
-
-$$
-\pi(Q)=R(Q)-C(Q)
-$$
-
-where $R(Q)$ is the firm's total revenue as a a function of output and $C(Q)$ is the firm's total cost as a function of output.
-
-We want to consider the firm's profit maximisation problem. We will employ the first-derivative approach to solving this problem.
-
-
-Suppose that profit as a function of output $(\pi(Q))$ is at least twice continuously differentiable. This means that any critical point for this function will involve its first derivative equalling zero.
-
-Suppose that a unique critical point of this variety exists. It will involve $\pi^{\prime}(Q)=0$. Note that
-
-$$
-\begin{aligned}
-\pi^{\prime}(Q) & =R^{\prime}(Q)-C^{\prime}(Q) \\
-& =M R(Q)-M C(Q)
-\end{aligned}
-$$
-
-Thus the critical point will occur when
-
-$$
-M R(Q)-M C(Q)=0
-$$
-
-which requires that
-
-$$
-M R(Q)=M C(Q)
-$$
-
-Denote this critical point by $Q_{0}$. A sufficient condition for $Q_{0}$ to generate the maximum possible profit for the firm is that both
-
-$$
-\text { (i) } \pi^{\prime}(Q)>0 \text { for all } Q<Q_{0}
-$$
-
-and
-
-$$
-\text { (ii) } \pi^{\prime}(Q)<0 \text { for all } Q>Q_{0} \text {. }
-$$
-
-Note that
-
-$$
-\begin{aligned}
-\pi^{\prime}(Q)>0 & \Longleftrightarrow M R(Q)-M C(Q)>0 \\
-& \Longleftrightarrow M R(Q)>M C(Q)
-\end{aligned}
-$$
-
-and
-
-$$
-\begin{aligned}
-\pi^{\prime}(Q)<0 & \Longleftrightarrow M R(Q)-M C(Q)<0 \\
-& \Longleftrightarrow M R(Q)<M C(Q) .
-\end{aligned}
-$$
-
-Thus a sufficient set of conditions for $Q_{0}$ to generate the maximum possible profit for the firm is that
-
-1. $M R\left(Q_{0}\right)=M C\left(Q_{0}\right)$,
-2. $M R(Q)>M C(Q)$ for all $Q<Q_{0}$, and
-3. $M R(Q)<M C(Q)$ for all $Q>Q_{0}$.
 
 
 ## Using derivatives to approximate things
