Planning the next few lectures

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1,3 +1,15 @@
+---
+jupytext:
+  formats: md:myst
+  text_representation:
+    extension: .md
+    format_name: myst
+kernelspec:
+  display_name: Python 3
+  language: python
+  name: python3
+---
+
 # 📖 Univariate differentiation
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
@@ -36,19 +48,21 @@ More advanced references:
 
 ## Limit for functions
 
-Consider a function, $f: \mathbb{R} \rightarrow \mathbb{R}$. This function can be written as $f(x)$. Note that $x \in \mathbb{R}$ here. Furthermore, for each point $x_0 \in \mathbb{R}$, we have $f(x_0) \in \mathbb{R}$ as well. In other words, the domain of $f$ is $\mathbb{R}$, while the range of $f$ is a (possibly improper) subset of $\mathbb{R}$.
+Consider a *univariate* function $f: \mathbb{R} \rightarrow \mathbb{R}$ written as $f(x)$
+
+The domain of $f$ is $\mathbb{R}$, the range of $f$ is a (possibly improper) subset of $\mathbb{R}$
 
 {cite:ps}`spivak2006` (p. 90) provides the following informal definition of a limit: “The function $f$ approaches the limit $l$ near [the point $x =$] $a$,
 if we can make $f(x)$ as close as we like to $l$ by requiring that $x$ be sufficiently close to, but unequal to, $a$.”
 
-{cite:ps}`spivak2006` (p. 96) provides the following formal definition of a limit: “The function $f$ **approaches the limit $l$ near** [the point $x =$] $a$ means: for every $\epsilon > 0$, there is some $\delta > 0$ such that, for all $x$, if 
-$0 < |x − a| < \delta$, then $|f (x ) − l | < \epsilon$.”. (Bold in the original.)
+```{admonition} Definition
+:class: caution
 
-The formal definition provided by Spivak is known as an **epsilon-delta** ($\epsilon-\delta$) definition of the limit concept. It could also be written as follows:
+The function $f: \mathbb{R} \rightarrow \mathbb{R}$ approaches the limit $l$ near [the point $x =$] $a$ if for every $\epsilon > 0$, there is some $\delta > 0$ such that, for all $x$ such as
+$|x − a| < \delta$, $|f (x ) − l | < \epsilon$.
+```
 
-The limit of $f$ as $x$ approaches $a$ is $l$ if, for each $\epsilon > 0$, there exists some $\delta_\epsilon > 0$ such that
-
-$$ 0 < d (x, a) < \delta_\epsilon \Rightarrow d (f (x ) , l ) < \epsilon $$
+The absolute value $|\cdot|$ in this definition plays the role of general distance function $\|\cdot\|$ which would be appropriate for the functions from $\mathbb{R}^n$ to $\mathbb{R}^k$.
 
 Suppose that the limit of $f$ as $x$ approaches $a$ is $l$. We can write this as
 
@@ -92,8 +106,12 @@ In such cases, an appropriate choice of $\delta_{\epsilon}$ is $\delta_{\epsilon
 ### Some useful rules about limits
 
 - In practice, we would like to be able to find at least some limits without having to resort to the formal "epsilon-delta" arguments that define them. The following rules can sometimes assist us with this.
-- Let $c \in \mathbb{R}$ be a fixed constant, $a \in \mathbb{R}, \alpha \in \mathbb{R}, \beta \in \mathbb{R}, n \in \mathbb{N}$, $f: \mathbb{R} \longrightarrow \mathbb{R}$ be a function for which $\lim _{x \rightarrow a} f(x)=\alpha$, and $g: \mathbb{R} \longrightarrow \mathbb{R}$ be a function for which $\lim _{x \rightarrow a} g(x)=\beta$.
-- The following rules apply for limits.
+
+```{admonition} Fact
+:class: important
+
+Let $c \in \mathbb{R}$ be a fixed constant, $a \in \mathbb{R}, \alpha \in \mathbb{R}, \beta \in \mathbb{R}, n \in \mathbb{N}$, $f: \mathbb{R} \longrightarrow \mathbb{R}$ be a function for which $\lim _{x \rightarrow a} f(x)=\alpha$, and $g: \mathbb{R} \longrightarrow \mathbb{R}$ be a function for which $\lim _{x \rightarrow a} g(x)=\beta$.
+The following rules apply for limits:
 - $\lim _{x \rightarrow a} c=c$ for any $a \in \mathbb{R}$.
 - $\lim _{x \rightarrow a}(c f(x))=c\left(\lim _{x \rightarrow a} f(x)\right)=c \alpha$.
 - $\lim _{x \rightarrow a}(f(x)+g(x))=\left(\lim _{x \rightarrow a} f(x)\right)+\left(\lim _{x \rightarrow a} g(x)\right)=\alpha+\beta$.
@@ -101,6 +119,8 @@ In such cases, an appropriate choice of $\delta_{\epsilon}$ is $\delta_{\epsilon
 - $\lim _{x \rightarrow a}\left(\frac{f(x)}{g(x)}\right)=\frac{\lim _{x \rightarrow a} f(x)}{\lim _{x \rightarrow a} g(x)}=\frac{\alpha}{\beta}$ whenever $\beta \neq 0$.
 - $\lim _{x \rightarrow a} \sqrt[n]{f(x)}=\sqrt[n]{\lim _{x \rightarrow a} f(x)}=\sqrt[n]{\alpha}$ whenever $\sqrt[n]{\alpha}$ is defined.
 - After we have learned about differentiation, we will learn about another useful rule for limits that is known as "L'Hopital's rule".
+
+```
 
 
 ```{admonition} Example
@@ -253,11 +273,25 @@ Our focus here is on continuous real-valued functions of a single real variable.
 
 Before looking at the picky technical details of the concept of continuity, it is worth thinking about that concept intuitively. Basically, a real-valued function of a single real-valued variable is **continuous** if you could potentially draw its graph without lifting your pen from the page. In other words, there are no holes in the graph of the function and there are no jumps in the graph of the function.
 
-Now for the slightly picky technical details!
-- A function is continuous _at the point_ $x_0 \in X$ if $\lim_{x \rightarrow x_0} f (x ) = f (x_0)$.
-- A function is continuous on a connected interval $(a, b) \subseteq X$ for which $a < b$ if it is continuous at all points in that interval. In other words, a function is continuous on $(a, b) \subseteq X$ for which $a < b$ if $\lim_{x \rightarrow x_0} f (x ) = f (x_0)$ for all $x_0 \in (a, b)$.
-- A function is **continuous** if it is continuous at every point in its domain. In other words, a function is continuous if $\lim_{x \rightarrow x_0} f (x ) = f (x_0)$ for all $x_0 \in X$.
+```{admonition} Definition
+:class: caution
+:name: continuous-functions
 
+Let $f \colon A \to \mathbb{R}$
+
+$f$ is called **continuous at** $a \in A$ if
+:::{math}
+\forall \{x_n\} \in A \colon \lim_{n \to \infty} x_n = a \in A
+\quad \implies \quad
+f(x_n) \to f(a) 
+:::
+
+Or, alternatively,
+:::{math}
+\lim_{x \to a} f(x) = f(a)
+:::
+
+```
 
 ```{admonition} Definition
 :class: caution
@@ -407,32 +441,6 @@ An example of oscillating discontinuity is the function $f(x) = \sin(1/x)$ which
 
 ```
 
-
-**EDIT EDIT **
-
-
-Now for the really picky technical details!
-
-Let $X \subseteq \mathbb{R}^n$, $d^n$ be the $n$–dimensional Euclidean distance and $d$ be the one–dimensional Euclidean distance.
-
-Suppose that $f : X \rightarrow \mathbb{R}$.
-The mapping $f$ is said to be **continuous** at the point $x_0 \in X$ if, given any $\epsilon > 0$, there exists a $\delta > 0$ such that $d(f (x ), f (x_0)) < \epsilon$ whenever $d^n(x, x_0) < \delta$.
-
-This is a formal version of the statement that $\lim_{x \rightarrow x_0} f (x ) = f (x_0)$.
-
-```{figure} _static/img/lecture_06/continuity.png
-:width: 80%
-:align: center
-
-Epsilon-delta continuity diagram
-```
-
-```{figure} _static/img/lecture_06/discontinuity.png
-:width: 80%
-:align: center
-
-Epsilon-delta discontinuity diagram
-```
 
 ```{admonition} Example
 :class: tip
@@ -966,6 +974,8 @@ $$
 
 ### Continuity does NOT imply differentiability
 
+To support this statement all we need is to demonstrate a single example of a function that is continuous at a point but not differentiable at that point.
+
 Consider the function
 
 $$
@@ -1015,6 +1025,13 @@ $$
 $$
 
 does not exist.
+
+```{admonition} Example
+:class: tip
+
+A example of a function that is continuous at every point but not differentiable at any point is the Wiener process (Brownian motion).
+```
+
 
 ### Differentiability implies continuity
 
@@ -1138,14 +1155,14 @@ $$
 ```
 
 
-### Interpreting first and second derivatives
+## Using first and second derivatives to investigate the shape of a function
 
 - The first and second order derivatives of a function provide useful information about the shape of that function.
 - The first derivative tells us about the slope of a function. Is it increasing, decreasing, or constant over some interval? At what point or points, if any, does the sign of the slope of the function change? (Such points are known as turning points.)
 - The second derivative tells us about the curvature of the function. Is it convex or concave over some interval? At what point or points, if any, does the curvature of the function change? (Such points are known as inflexion points.)
 
 
-## Increasing functions
+### Increasing functions
 
 - A function is said to be **increasing** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(x_{0}\right) \leqslant f\left(x_{1}\right)$ whenever $x_{0}<x_{1}$, where $x_{0} \in(a, b)$ and $x_{1} \in(a, b)$.
     - If $f^{\prime}(x) \geqslant 0$ for all $x \in(a, b)$, then the function $f(x)$ is increasing on the interval $(a, b)$.
@@ -1153,7 +1170,7 @@ $$
     - If $f^{\prime}(x)>0$ for all $x \in(a, b)$, then the function $f(x)$ is strictly increasing on the interval $(a, b)$.
 
 
-## Decreasing functions
+### Decreasing functions
 
 - A function is said to be **decreasing** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(x_{0}\right) \geqslant f\left(x_{1}\right)$ whenever $x_{0}<x_{1}$, where $x_{0} \in(a, b)$ and $x_{1} \in(a, b)$.
     - If $f^{\prime}(x) \leqslant 0$ for all $x \in(a, b)$, then the function $f(x)$ is decreasing on the interval $(a, b)$.
@@ -1161,7 +1178,7 @@ $$
     - If $f^{\prime}(x)<0$ for all $x \in(a, b)$, then the function $f(x)$ is strictly decreasing on the interval $(a, b)$.
 
 
-## Convex functions
+### Convex functions
 
 - A function is said to be **convex** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(\lambda x_{0}+(1-\lambda) x_{1}\right) \leqslant \lambda f\left(x_{0}\right)+(1-\lambda) f\left(x_{1}\right)$ whenever $x_{0} \in(a, b), x_{1} \in(a, b)$ and $x_{0} \neq x_{1}$.
     - In other words, a function is convex on an interval if the graph of the straight line joining any two distinct points in that interval lies on or above the graph of the function between those two points.
@@ -1171,7 +1188,7 @@ $$
     - If $f^{\prime \prime}(x)>0$ for all $x \in(a, b)$, then the function $f(x)$ is strictly convex on the interval $(a, b)$.
 
 
-## Concave functions
+### Concave functions
 
 - A function is said to be **concave** on the non-empty interval $(a, b) \subseteq \mathbb{R}$ if $f\left(\lambda x_{0}+(1-\lambda) x_{1}\right) \geqslant \lambda f\left(x_{0}\right)+(1-\lambda) f\left(x_{1}\right)$ whenever $x_{0} \in(a, b), x_{1} \in(a, b)$ and $x_{0} \neq x_{1}$.
     - In other words, a function is concave on an interval if the graph of the straight line joining any two distinct points in that interval lies on or below the graph of the function between those two points.
@@ -1181,7 +1198,7 @@ $$
     - If $f^{\prime \prime}(x)<0$ for all $x \in(a, b)$, then the function $f(x)$ is strictly convex on the interval $(a, b)$.
 
 
-## Peak (local maximum) turning points
+### Peak (local maximum) turning points
 
 - The point $c$ yields a **local maximum** of the function $f(x)$ if there exists some non-empty interval $(a, b)$ that is a subset of the domain of the function such that $c \in(a, b)$ and $f(x) \leqslant f(c)$ for all $x \in(a, b)$.
 - If (i) $f^{\prime}(c)=0$, (ii) $f^{\prime}(x) \geqslant 0$ for all $x \in(a, c)$ where $a<c$, and (iii) $f^{\prime}(x) \leqslant 0$ for all $x \in(c, b)$ where $c<b$, then the point $x=c$ yields a local maximum of the function $f$ over the non-empty interval $(a, b)$.
@@ -1189,7 +1206,7 @@ $$
     - Note that we need $f^{\prime \prime}(c)<0$ here. If $f^{\prime \prime}(c)=0$, then this theorem does not apply. In such a case, a different approach must be used to determine whether or not the point $x=c$ yields a local maximum of the function.
 
 
-## Trough (local minimum) turning points
+### Trough (local minimum) turning points
 
 - The point $c$ yields a **local minimum** of the function $f(x)$ if there exists some non-empty interval $(a, b)$ that is a subset of the domain of the function such that $c \in(a, b)$ and $f(x) \geqslant f(c)$ for all $x \in(a, b)$.
 - If (i) $f^{\prime}(c)=0$, (ii) $f^{\prime}(x) \leqslant 0$ for all $x \in(a, c)$ where $a<c$, and (iii) $f^{\prime}(x) \geqslant 0$ for all $x \in(c, b)$ where $c<b$, then the point $x=c$ yields a local minimum of the function $f$ over the non-empty interval $(a, b)$.
@@ -1197,7 +1214,7 @@ $$
     - Note that we need $f^{\prime \prime}(c)>0$ here. If $f^{\prime \prime}(c)=0$, then this theorem does not apply. In such a case, a different approach must be used to determine whether or not the point $x=c$ yields a local minimum of the function.
 
 
-## Inflection points
+### Inflection points
 
 - An **inflection point** of a function is a point at which the curvature of the function changes from either convex to concave or concave to convex.
 - The point $x=c$ is an inflection point of the twice differentiable function $f(x)$ if there exists some interval $(a, b)$ that is a subset of the domain of $f(x)$ such that $c \in(a, b)$ and either (a) both (i) $f^{\prime \prime}(x) \geqslant 0$ for all $x \in(a, c)$ and (ii) $f^{\prime \prime}(x) \leqslant 0$ for all $x \in(c, b)$, or (b) both (i) $f^{\prime \prime}(x) \leqslant 0$ for all $x \in(a, c)$ and (ii) $f^{\prime \prime}(x) \geqslant 0$ for all $x \in(c, b)$.
@@ -1207,7 +1224,7 @@ $$
 - Suppose that the function $f(x)$ is twice continuously differentiable on the interval $(a, b)$, where that interval is a subset of the domain of the function and $c \in(a, b)$. If both (i) $f^{\prime \prime}(c)=0$ and (ii) $f^{\prime \prime}(c)$ changes sign at the point $x=c$, then the point $x=c$ is an inflection point of the function $f(x)$.
 
 
-### Some economic applications of derivatives
+## Some economic applications of derivatives
 
 - Obtaining marginal revenue from total revenue and marginal cost from total cost.
 - The relationship between the marginal cost curve and the average cost curve. (See separate handout.)
@@ -1215,7 +1232,7 @@ $$
 - The calculation of elasticities, with a particular focus on the own-price elasticity of demand, cross-price elasticities of demand, the income elasticity of demand, and the own-price elasticity of supply.
 
 
-#### Marginal revenue and marginal cost
+### Marginal revenue and marginal cost
 
 - If a firm's total revenue as a function of output is given by the function $R(Q)$, then its marginal revenue is given by the first derivative of that function:
 
@@ -1229,7 +1246,7 @@ $$
 MC(Q)=\frac{d C(Q)}{d Q}=C^{\prime}(Q)
 $$
 
-#### Marginal revenue for a monopolist
+### Marginal revenue for a monopolist
 
 Consider a single-priced monopolist that faces an inverse demand curve that is given by the function $P(Q)$. Since demand curves usually slope down, we will assume that $P^{\prime}(Q)<0$. The total revenue for this monopolist is given by $R(Q)=P(Q) Q$. As such, the marginal revenue for this monopolist is
 
@@ -1254,7 +1271,7 @@ The two terms that make up marginal revenue for a monopolist can be given a very
 
 
 
-#### Point elasticities
+### Point elasticities
 
 
 FROM LINEAR DEMAND
@@ -1362,7 +1379,7 @@ $$
 
 
 
-## Using derivatives to approximate things
+## Taylor series approximations of functions
 
 In situations where functions are rather complicated (especially when they are non-linear and non-separable in the components that make use of the independent variable), it is sometimes convenient to approximate the function, or the change in the value generated by the function, rather than calculate it directly. Obviously, we need to worry about the accuracy of the approximation when we do this.
 
@@ -1373,8 +1390,6 @@ Derivatives can be used to form some such approximations. In particular, they ca
 - We will also look at differential approximations to the change in the value taken by a function when there is a change in the value taken by the independent variable.
 
 
-
-### Taylor series approximations of functions
 
 Consider the function $f:(a, b) \longrightarrow \mathbb{R}$, where $-\infty<a<b<\infty$. Denote this function by $f(x)$.
 
@@ -1410,6 +1425,30 @@ $$
 f(x) \approx \sum_{k=0}^{\infty}\left(\frac{1}{k !}\right) f^{(k)}\left(x_{0}\right)\left(x-x_{0}\right)^{k}
 $$
 
+
+```{figure} _static/img/lecture_06/taylor_4.png
+:width: 60%
+
+4th order Taylor series for $f(x) = \sin(x)/x$ at 0
+```
+
+```{figure} _static/img/lecture_06/taylor_6.png
+:width: 60%
+
+6th order Taylor series for $f(x) = \sin(x)/x$ at 0
+```
+
+```{figure} _static/img/lecture_06/taylor_8.png
+:width: 60%
+
+8th order Taylor series for $f(x) = \sin(x)/x$ at 0
+```
+
+```{figure} _static/img/lecture_06/taylor_10.png
+:width: 60%
+
+10th order Taylor series for $f(x) = \sin(x)/x$ at 0
+```
 
 
 It is important to remember that Taylor series approximations of functions are just that: An approximation of the function.
@@ -1504,3 +1543,10 @@ $$
 $$
 \lim _{x \rightarrow x_{0}} f(x)=\lim _{x \rightarrow x_{0}}\left(\frac{g(x)}{h(x)}\right)=\lim _{x \rightarrow x_{0}}\left(\frac{g^{\prime}(x)}{h^{\prime}(x)}\right)=L
 $$
+
+```{admonition} Example
+:class: tip
+
+Examples of indeterminate forms of limits
+
+```
