Problem set delta

--- a/ps04.delta.md
+++ b/ps04.delta.md
@@ -21,10 +21,10 @@ Not all problems may be covered in the tutorial, those left are for additional p
 
 ::::::{tab-set}
 :::::{tab-item} Formulation
-:::{include} ../01.tutorial_problems/delta1.md
+:::{include} tutorial_problems/delta1.md
 :::::
 :::::{tab-item} Solution
-:::{include} ../01.tutorial_problems/delta1.sol.md
+:::{include} tutorial_problems/delta1.sol.md
 :::::
 ::::::
 
@@ -32,10 +32,10 @@ Not all problems may be covered in the tutorial, those left are for additional p
 
 ::::::{tab-set}
 :::::{tab-item} Formulation
-:::{include} ../01.tutorial_problems/delta2.md
+:::{include} tutorial_problems/delta2.md
 :::::
 :::::{tab-item} Solution
-:::{include} ../01.tutorial_problems/delta2.sol.md
+:::{include} tutorial_problems/delta2.sol.md
 :::::
 ::::::
 
@@ -43,10 +43,10 @@ Not all problems may be covered in the tutorial, those left are for additional p
 
 ::::::{tab-set}
 :::::{tab-item} Formulation
-:::{include} ../01.tutorial_problems/delta3.md
+:::{include} tutorial_problems/delta3.md
 :::::
 :::::{tab-item} Solution
-:::{include} ../01.tutorial_problems/delta3.sol.md
+:::{include} tutorial_problems/delta3.sol.md
 :::::
 ::::::
 
@@ -54,10 +54,10 @@ Not all problems may be covered in the tutorial, those left are for additional p
 
 ::::::{tab-set}
 :::::{tab-item} Formulation
-:::{include} ../01.tutorial_problems/delta4.md
+:::{include} tutorial_problems/delta4.md
 :::::
 :::::{tab-item} Solution
-:::{include} ../01.tutorial_problems/delta4.sol.md
+:::{include} tutorial_problems/delta4.sol.md
 :::::
 ::::::
 
@@ -65,9 +65,20 @@ Not all problems may be covered in the tutorial, those left are for additional p
 
 ::::::{tab-set}
 :::::{tab-item} Formulation
-:::{include} ../01.tutorial_problems/delta5.md
+:::{include} tutorial_problems/delta5.md
 :::::
 :::::{tab-item} Solution
-:::{include} ../01.tutorial_problems/delta5.sol.md
+:::{include} tutorial_problems/delta5.sol.md
+:::::
+::::::
+
+## $\delta$.6
+
+::::::{tab-set}
+:::::{tab-item} Formulation
+:::{include} tutorial_problems/delta6.md
+:::::
+:::::{tab-item} Solution
+:::{include} tutorial_problems/delta6.sol.md
 :::::
 ::::::
