Working on lecture 6

--- a/99.taylor_series.md
+++ b/99.taylor_series.md
@@ -102,7 +102,7 @@ $$
 for some $z$ between $x$ and $x_{0}$. (If $x<x_{0}$, then $z \in\left(x, x_{0}\right)$. If $x>x_{0}$, then $z \in\left(x_{0}, x\right)$.)
 
 
-### Differential approximation to a change in a function's value
+## Differential approximation to a change in a function's value
 
 Consider a function $y=f(x)$ that is at least once differentiable on some non-empty interval $(a, b)$.  Suppose that the value of the independent variable changes from some initial value $x \in(a, b)$ to some final value $x+\Delta x \in(a, b)$.
 
@@ -131,7 +131,7 @@ $$
 This expression is known as the linear (or first-order) **differential** of the function $f(x)$.
 
 
-### An application of linear differential approximation
+## An application of linear differential approximation
 
 The change in the natural logarithm of a variable is approximately equal to the corresponding proprtionate change in that variable. As such, we can interpret the change in the natural logarithm of the price level in an economy as a good indicator of inflation in that economy (as long as the change in the price level is not too large). This can be seen by noting that if $p=\ln (P)$, where $P$ is the price level in an economy, then
 
